[package]
name = "follower-sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-recursion = "1.0.0"
percent-encoding = "2.1.0"
chrono = "0.4.17"
hmac-sha1 = "0.1.3"
base64 = "0.12.3"
maplit = "1.0.2"
colored = "2"
regex = "1"

